BUG-745: Change z-index to auto for ie

--- a/sass/web.site/modules/article/_article-lineage.sass
+++ b/sass/web.site/modules/article/_article-lineage.sass
@@ -30,7 +30,7 @@ $article-lineage-transition-duration: .4s
 	&--absolute,
 	&--fixed
 		opacity: 1
-		z-index: initial
+		z-index: auto
 	&--absolute
 		position: absolute
 		top: auto
